crone and redis removed
